[Refactor] Introduce StreamMetadata to group partition metadata by stream (#17811)
* Introduce StreamMetadata to group partition metadata by stream

Replace the flat List<PartitionGroupMetadata> pattern with
List<StreamMetadata>, where each StreamMetadata groups partition
metadata for a single stream along with its StreamConfig and index.
This makes stream membership explicit and eliminates the need for
callers to decode partition IDs to determine stream ownership.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* [Refactor] Introduce StreamMetadata to group partition metadata by stream

Introduce StreamMetadata to replace the flat List<PartitionGroupMetadata>
pattern where partitions from all streams were mixed together and required
partition ID padding (streamIndex * 10000 + streamPartitionId) to identify
stream membership.

Key changes:
- New StreamMetadata class grouping PartitionGroupMetadata per stream with
  StreamConfig and numPartitions (total partition count from broker)
- PartitionGroupMetadataFetcher now produces List<StreamMetadata> with a
  deprecated backward-compat getPartitionGroupMetadataList() method
- setUpNewTable and addTable APIs take List<StreamMetadata> directly
- PartitionGroupMetadata gains a sequenceNumber field (default -1 = unset)
  to replace the Pair<PartitionGroupMetadata, Integer> pattern
- fetchPartitionCount() called after computePartitionGroupMetadata() to
  avoid duplicate metadata RPCs for Kafka-like implementations
- Copy table flow constructs StreamMetadata from watermarks with real
  partition counts via getPartitionCountMap()
- Callers using sequence number validate >= 0 before use

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>